# floating-clock

./: .clangd  .gitignore  CMakeLists.txt  Clouck.pro  FloatingClock.h  Info.plist.in  README-CN.md  README.md  XML_CONFIG_GUIDE.md  build.sh  build_cross_platform.sh  clean.sh  clock  clock.cpp  clock.h  clock.py  clock_widget.cpp  clock_widget.h  clockwidget.cpp  clockwidget.h  compile_commands.json  config.ini  config.xml  config_manager.cpp  config_manager.h  configmanager.cpp  configmanager.h  flock.cpp  flock.h  flock.pro  main.cpp  qtcsettings.cmake  test_completion.sh  test_config_save.cpp  test_cross_platform.sh  test_fullscreen.sh  test_github_actions.sh  test_resizable.sh  test_xml_config.sh  window_helper.cpp  (+7 more)
.github/workflows/: README.md  build.yml  ci.yml  release.yml
clock_autogen/: mocs_compilation.cpp
cmake/: CMakeLists.txt
